add new website from server na

--- a/xem-phim-bo/giang-thanh-quy-su/index.html
+++ b/xem-phim-bo/giang-thanh-quy-su/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1718,18 +1718,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tong-hop-cac-co-vo" title="Tổng Hợp Các Cô Vợ">
+          <a class="list-top-movie-link" href="/phim-moi/xac-song-dang-so-phan-8" title="Xác Sống Đáng Sợ (Phần 8)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tong-hop-cac-co-vo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-song-dang-so-phan-8-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tổng Hợp Các Cô Vợ
+             Xác Sống Đáng Sợ (Phần 8)
             </span>
             <span class="list-top-movie-item-en">
-             아내들의 모든 것
+             Fear the Walking Dead (Season 8)
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bo-nguc-mem-mai-cua-chi-dau" title="Bộ Ngực Mềm Mại Của Chị Dâu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-nguc-mem-mai-cua-chi-dau-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bộ Ngực Mềm Mại Của Chị Dâu
+            </span>
+            <span class="list-top-movie-item-en">
+             떡정
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/rambow-nhi" title="Rambow Nhí">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rambow-nhi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Rambow Nhí
+            </span>
+            <span class="list-top-movie-item-en">
+             Son of Rambow
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1740,21 +1784,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ban-cua-bep-truong-phap" title="Bàn của bếp trưởng: Pháp">
+          <a class="list-top-movie-link" href="/phim-moi/dau-pha-thuong-khung-2-ngung-chien" title="Đấu Phá Thương Khung 2: Ngừng Chiến">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-cua-bep-truong-phap-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dau-pha-thuong-khung-2-ngung-chien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bàn của bếp trưởng: Pháp
+             Đấu Phá Thương Khung 2: Ngừng Chiến
             </span>
             <span class="list-top-movie-item-en">
-             Chef's Table: France
+             Fights Break Sphere 2
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1762,62 +1806,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thanh-guom-diet-quy-phan-1-phan-kamado-tanjiro-lap-chi" title="Thanh gươm diệt quỷ (Phần 1) – Phần Kamado Tanjiro, lập chí">
+          <a class="list-top-movie-link" href="/phim-moi/dang-sau-chien-tuyen" title="Đằng Sau Chiến Tuyến">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-guom-diet-quy-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dang-sau-chien-tuyen-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thanh gươm diệt quỷ (Phần 1) – Phần Kamado Tanjiro, lập chí
+             Đằng Sau Chiến Tuyến
             </span>
             <span class="list-top-movie-item-en">
-             Demon Slayer: Kimetsu no Yaiba (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gnomeo-va-juliet" title="Gnomeo Và Juliet">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gnomeo-va-juliet-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Gnomeo Và Juliet
-            </span>
-            <span class="list-top-movie-item-en">
-             Gnomeo &amp; Juliet
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cach-de-tao-nen-co-ban-gai-nhat-nheo-movie" title="Cách để tạo nên cô bạn gái nhạt nhẽo Movie">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cach-de-tao-nen-co-ban-gai-nhat-nheo-movie-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cách để tạo nên cô bạn gái nhạt nhẽo Movie
-            </span>
-            <span class="list-top-movie-item-en">
-             Saenai Heroine no Sodatekata Fine The Movie Saenai Heroine no Sodatekata Fine
+             Behind Enemy Lines
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
