add new website from server na

--- a/xem-phim-moi/doraemon-nobita-va-ban-giao-huong-dia-cau/index.html
+++ b/xem-phim-moi/doraemon-nobita-va-ban-giao-huong-dia-cau/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             11
+             12
             </dd>
             <br/>
            </dl>
@@ -1787,40 +1787,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ticker" title="Ticker">
+          <a class="list-top-movie-link" href="/phim-moi/bo-bien-mau" title="Bờ biển máu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ticker-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-bien-mau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ticker
+             Bờ biển máu
             </span>
             <span class="list-top-movie-item-en">
-             Ticker
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-nhan-online" title="Tình Nhân Online">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-nhan-online-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tình Nhân Online
-            </span>
-            <span class="list-top-movie-item-en">
-             Mike and Dave Need Wedding Dates
+             Blood Coast
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1831,21 +1809,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bai-hat-cho-cong-dan-nhi" title="Bài hát cho công dân nhí">
+          <a class="list-top-movie-link" href="/phim-moi/tuyen-ngon-doc-than" title="Tuyên Ngôn Dôc Thân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bai-hat-cho-cong-dan-nhi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuyen-ngon-doc-than-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bài hát cho công dân nhí
+             Tuyên Ngôn Dôc Thân
             </span>
             <span class="list-top-movie-item-en">
-             We the People
+             How to Be Single
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1853,21 +1831,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngoi-nha-cua-ke-sat-nhan" title="Ngôi Nhà Của Kẻ Sát Nhân">
+          <a class="list-top-movie-link" href="/phim-moi/the-new-gate" title="THE NEW GATE">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-nha-cua-ke-sat-nhan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-new-gate-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ngôi Nhà Của Kẻ Sát Nhân
+             THE NEW GATE
             </span>
             <span class="list-top-movie-item-en">
-             The House That Jack Built
+             THE NEW GATE
             </span>
             <span class="list-top-movie-item-view">
-             6 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1875,18 +1853,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hau-gai-rong-nha-kobayashi-s" title="Hầu gái rồng nhà Kobayashi S">
+          <a class="list-top-movie-link" href="/phim-moi/mashle-magic-and-muscles" title="Mashle: Magic and Muscles">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hau-gai-rong-nha-kobayashi-s-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mashle-magic-and-muscles-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hầu gái rồng nhà Kobayashi S
+             Mashle: Magic and Muscles
             </span>
             <span class="list-top-movie-item-en">
-             Miss Kobayashi’s Dragon Maid S, Kobayashi-san Chi no Maidragon S
+             Mashle: Magic and Muscles
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/iruma-gia-dao" title="Iruma giá đáo!">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/iruma-gia-dao-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Iruma giá đáo!
+            </span>
+            <span class="list-top-movie-item-en">
+             Mairimashita! Iruma-kun
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
